# NEAT-Snake

./: .gitignore  CMakeLists.txt  NEAT_Snake  README.md  config.cfg
include/: controller.hpp  hsv_color.hpp  rng.hpp  snakeEngine.hpp  ticker.hpp
include/NEAT/: activations.hpp  config.hpp  genes.hpp  genome.hpp  network.hpp  population.hpp  rng.hpp
src/: main.cpp
src/NEAT/: config.cpp  genes.cpp  genome.cpp  network.cpp  population.cpp  rng.cpp
tests/: testcrossover.cpp  testgenes.cpp  testgenome.cpp  testlayers.cpp  testmutate.cpp  testpopulation.cpp  train.cpp
